--- a/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
+++ b/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -9,7 +16,7 @@
     "# Import dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "pd.set_option('max_colwidth', 400)"
+    "pd.set_option('max_colwidth', 400) "
    ]
   },
   {
@@ -3700,7 +3707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
