Worked on making the campaign dataframe, completed everything but the merge

--- a/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
+++ b/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
@@ -240,7 +240,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -276,18 +277,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -465,13 +467,16 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df['category'] = crowdfunding_info_df['category & sub-category'].str.extract(r'^(.*?)/')\n",
+    "crowdfunding_info_df['subcategory'] = crowdfunding_info_df['category & sub-category'].str.extract(r'/(.*)')\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -914,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1097,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1283,18 +1288,22 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df.rename(columns={'blurb': \"description\",\n",
+    "                            'launched_at': \"launched_date\",\n",
+    "                            'deadline': \"end_date\"}, inplace=True)\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1472,18 +1481,21 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[\"goal\"]  = campaign_df[\"goal\"].astype(float)\n",
+    "campaign_df[\"pledged\"]  = campaign_df[\"pledged\"].astype(float)\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1509,18 +1521,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1698,14 +1711,17 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df[\"launched_date\"]  = pd.to_datetime(campaign_df[\"launched_date\"], unit = 's').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df[\"end_date\"]  = pd.to_datetime(campaign_df[\"end_date\"], unit = 's').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -2052,7 +2068,8 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
+    "campaign_merged_category_df = pd.merge(campaign_df,category_df, on = 'category')\n",
+    "campaign_merged_df = pd.merge(campaign_merged_category_df,subcategory_df, on = 'subcategory')\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
@@ -2225,7 +2242,9 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_merged_df.drop(columns = ['category & sub-category','category','sub-category'])\n",
+    "campaign_merged_df.head()"
    ]
   },
   {
