--- a/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
+++ b/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -433,50 +433,196 @@
        "      <td>theater</td>\n",
        "      <td>plays</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2986</td>\n",
+       "      <td>3684</td>\n",
+       "      <td>Manning-Hamilton</td>\n",
+       "      <td>Vision-oriented scalable definition</td>\n",
+       "      <td>97300</td>\n",
+       "      <td>153216</td>\n",
+       "      <td>successful</td>\n",
+       "      <td>2043</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1609221600</td>\n",
+       "      <td>1622350800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "      <td>food</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2031</td>\n",
+       "      <td>5784</td>\n",
+       "      <td>Butler LLC</td>\n",
+       "      <td>Future-proofed upward-trending migration</td>\n",
+       "      <td>6600</td>\n",
+       "      <td>4814</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>112</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1634274000</td>\n",
+       "      <td>1638252000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1627</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>Ball LLC</td>\n",
+       "      <td>Right-sized full-range throughput</td>\n",
+       "      <td>7600</td>\n",
+       "      <td>4603</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>139</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>1636174800</td>\n",
+       "      <td>1639116000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>theater/plays</td>\n",
+       "      <td>theater</td>\n",
+       "      <td>plays</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>2175</td>\n",
+       "      <td>6073</td>\n",
+       "      <td>Taylor, Santiago and Flores</td>\n",
+       "      <td>Polarized composite customer loyalty</td>\n",
+       "      <td>66600</td>\n",
+       "      <td>37823</td>\n",
+       "      <td>failed</td>\n",
+       "      <td>374</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1602133200</td>\n",
+       "      <td>1618117200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>music/indie rock</td>\n",
+       "      <td>music</td>\n",
+       "      <td>indie rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1788</td>\n",
+       "      <td>4939</td>\n",
+       "      <td>Hernandez, Norton and Kelley</td>\n",
+       "      <td>Expanded eco-centric policy</td>\n",
+       "      <td>111100</td>\n",
+       "      <td>62819</td>\n",
+       "      <td>canceled</td>\n",
+       "      <td>1122</td>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>1609308000</td>\n",
+       "      <td>1629262800</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>food/food trucks</td>\n",
+       "      <td>food</td>\n",
+       "      <td>food trucks</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   cf_id  contact_id                 company_name  \\\n",
-       "0    147        4661   Baldwin, Riley and Jackson   \n",
-       "1   1621        3765                     Odom Inc   \n",
-       "2   1812        4187   Melton, Robinson and Fritz   \n",
-       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
-       "4   1365        2199                Larson-Little   \n",
+       "     cf_id  contact_id                  company_name  \\\n",
+       "0      147        4661    Baldwin, Riley and Jackson   \n",
+       "1     1621        3765                      Odom Inc   \n",
+       "2     1812        4187    Melton, Robinson and Fritz   \n",
+       "3     2156        4941   Mcdonald, Gonzalez and Ross   \n",
+       "4     1365        2199                 Larson-Little   \n",
+       "..     ...         ...                           ...   \n",
+       "995   2986        3684              Manning-Hamilton   \n",
+       "996   2031        5784                    Butler LLC   \n",
+       "997   1627        1498                      Ball LLC   \n",
+       "998   2175        6073   Taylor, Santiago and Flores   \n",
+       "999   1788        4939  Hernandez, Norton and Kelley   \n",
        "\n",
-       "                                           blurb    goal  pledged     outcome  \\\n",
-       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
-       "1               Managed bottom-line architecture    1400    14560  successful   \n",
-       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
-       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
-       "4                      Proactive foreground core    7600     5265      failed   \n",
+       "                                             blurb    goal  pledged  \\\n",
+       "0             Pre-emptive tertiary standardization     100        0   \n",
+       "1                 Managed bottom-line architecture    1400    14560   \n",
+       "2     Function-based leadingedge pricing structure  108400   142523   \n",
+       "3    Vision-oriented fresh-thinking conglomeration    4200     2477   \n",
+       "4                        Proactive foreground core    7600     5265   \n",
+       "..                                             ...     ...      ...   \n",
+       "995            Vision-oriented scalable definition   97300   153216   \n",
+       "996       Future-proofed upward-trending migration    6600     4814   \n",
+       "997              Right-sized full-range throughput    7600     4603   \n",
+       "998           Polarized composite customer loyalty   66600    37823   \n",
+       "999                    Expanded eco-centric policy  111100    62819   \n",
        "\n",
-       "   backers_count country currency  launched_at    deadline  staff_pick  \\\n",
-       "0              0      CA      CAD   1581573600  1614578400       False   \n",
-       "1            158      US      USD   1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
-       "3             24      US      USD   1634792400  1642399200       False   \n",
-       "4             53      US      USD   1608530400  1629694800       False   \n",
+       "        outcome  backers_count country currency  launched_at    deadline  \\\n",
+       "0        failed              0      CA      CAD   1581573600  1614578400   \n",
+       "1    successful            158      US      USD   1611554400  1621918800   \n",
+       "2    successful           1425      AU      AUD   1608184800  1640844000   \n",
+       "3        failed             24      US      USD   1634792400  1642399200   \n",
+       "4        failed             53      US      USD   1608530400  1629694800   \n",
+       "..          ...            ...     ...      ...          ...         ...   \n",
+       "995  successful           2043      US      USD   1609221600  1622350800   \n",
+       "996      failed            112      US      USD   1634274000  1638252000   \n",
+       "997    canceled            139      IT      EUR   1636174800  1639116000   \n",
+       "998      failed            374      US      USD   1602133200  1618117200   \n",
+       "999    canceled           1122      US      USD   1609308000  1629262800   \n",
        "\n",
-       "   spotlight category & sub-category    category  subcategory  \n",
-       "0      False        food/food trucks        food  food trucks  \n",
-       "1       True              music/rock       music         rock  \n",
-       "2      False          technology/web  technology          web  \n",
-       "3      False              music/rock       music         rock  \n",
-       "4      False           theater/plays     theater        plays  "
+       "     staff_pick  spotlight category & sub-category    category  subcategory  \n",
+       "0         False      False        food/food trucks        food  food trucks  \n",
+       "1         False       True              music/rock       music         rock  \n",
+       "2         False      False          technology/web  technology          web  \n",
+       "3         False      False              music/rock       music         rock  \n",
+       "4         False      False           theater/plays     theater        plays  \n",
+       "..          ...        ...                     ...         ...          ...  \n",
+       "995       False       True        food/food trucks        food  food trucks  \n",
+       "996       False      False           theater/plays     theater        plays  \n",
+       "997       False      False           theater/plays     theater        plays  \n",
+       "998       False       True        music/indie rock       music   indie rock  \n",
+       "999       False      False        food/food trucks        food  food trucks  \n",
+       "\n",
+       "[1000 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Assign the category and subcategory values to category and subcategory columns.\n",
-    "crowdfunding_info_df['category'] = crowdfunding_info_df['category & sub-category'].str.extract(r'^(.*?)/')\n",
-    "crowdfunding_info_df['subcategory'] = crowdfunding_info_df['category & sub-category'].str.extract(r'/(.*)')\n",
-    "crowdfunding_info_df.head()"
+    "crowdfunding_info_df[[\"category\", \"subcategory\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split('/', n=1, expand=True)\n",
+    "crowdfunding_info_df"
    ]
   },
   {
@@ -488,19 +634,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['food' 'music' 'technology' 'theater' 'film & video' 'publishing' 'games'\n",
-      " 'photography' 'journalism']\n",
-      "['food trucks' 'rock' 'web' 'plays' 'documentary' 'electric music' 'drama'\n",
-      " 'indie rock' 'wearables' 'nonfiction' 'animation' 'video games' 'shorts'\n",
-      " 'fiction' 'photography books' 'radio & podcasts' 'metal' 'jazz'\n",
-      " 'translations' 'television' 'mobile games' 'world music'\n",
-      " 'science fiction' 'audio']\n"
+      "['food', 'music', 'technology', 'theater', 'film & video', 'publishing', 'games', 'photography', 'journalism']\n",
+      "['food trucks', 'rock', 'web', 'plays', 'documentary', 'electric music', 'drama', 'indie rock', 'wearables', 'nonfiction', 'animation', 'video games', 'shorts', 'fiction', 'photography books', 'radio & podcasts', 'metal', 'jazz', 'translations', 'television', 'mobile games', 'world music', 'science fiction', 'audio']\n"
      ]
     }
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df[\"category\"].unique().tolist()\n",
+    "subcategories = crowdfunding_info_df[\"subcategory\"].unique().tolist()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -555,19 +697,23 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7', 'cat8', 'cat9']\n",
-      "['subcat1', 'subcat2', 'subcat3', 'subcat4', 'subcat5', 'subcat6', 'subcat7', 'subcat8', 'subcat9', 'subcat10', 'subcat11', 'subcat12', 'subcat13', 'subcat14', 'subcat15', 'subcat16', 'subcat17', 'subcat18', 'subcat19', 'subcat20', 'subcat21', 'subcat22', 'subcat23', 'subcat24']\n"
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"numpy.int32\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Use a list comprehension to add \"cat\" to each category_id. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m cat_ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcat\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m category_ids] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Use a list comprehension to add \"subcat\" to each subcategory_id.    \u001b[39;00m\n\u001b[0;32m      4\u001b[0m scat_ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubcat\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m subcategory_ids]\n",
+      "Cell \u001b[1;32mIn[9], line 2\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Use a list comprehension to add \"cat\" to each category_id. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m cat_ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m category_ids] \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Use a list comprehension to add \"subcat\" to each subcategory_id.    \u001b[39;00m\n\u001b[0;32m      4\u001b[0m scat_ids \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msubcat\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m subcategory_ids]\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"numpy.int32\") to str"
      ]
     }
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
-    "\n",
+    "cat_ids = [\"cat\" + x for x in category_ids] \n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [\"subcat\" + x for x in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -580,8 +726,9 @@
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "category_df = pd.DataFrame({\"category_id\": cat_ids, \"category\": categories})\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({\"subcategory_id\": scat_ids, \"subcategory\": subcategories})\n"
    ]
   },
   {
@@ -3726,7 +3873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
