--- a/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
+++ b/ETL_Mini_Project_RWheliss_BHill_ILopez.ipynb
@@ -1280,7 +1280,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1409,12 +1409,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
        "4                      Proactive foreground core    7600     5265      failed   \n",
        "\n",
-       "   backers_count country currency  launched_date    end_date  staff_pick  \\\n",
-       "0              0      CA      CAD     1581573600  1614578400       False   \n",
-       "1            158      US      USD     1611554400  1621918800       False   \n",
-       "2           1425      AU      AUD     1608184800  1640844000       False   \n",
-       "3             24      US      USD     1634792400  1642399200       False   \n",
-       "4             53      US      USD     1608530400  1629694800       False   \n",
+       "   backers_count country currency  launch_date    end_date  staff_pick  \\\n",
+       "0              0      CA      CAD   1581573600  1614578400       False   \n",
+       "1            158      US      USD   1611554400  1621918800       False   \n",
+       "2           1425      AU      AUD   1608184800  1640844000       False   \n",
+       "3             24      US      USD   1634792400  1642399200       False   \n",
+       "4             53      US      USD   1608530400  1629694800       False   \n",
        "\n",
        "   spotlight category & sub-category    category  subcategory  \n",
        "0      False        food/food trucks        food  food trucks  \n",
@@ -1432,7 +1432,7 @@
    "source": [
     "# Rename the blurb, launched_at, and deadline columns.\n",
     "campaign_df.rename(columns={'blurb': \"description\",\n",
-    "                            'launched_at': \"launched_date\",\n",
+    "                            'launched_at': \"launch_date\",\n",
     "                            'deadline': \"end_date\"}, inplace=True)\n",
     "campaign_df.head()"
    ]
@@ -1473,7 +1473,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1602,12 +1602,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency  launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD     1581573600  1614578400   \n",
-       "1  successful            158      US      USD     1611554400  1621918800   \n",
-       "2  successful           1425      AU      AUD     1608184800  1640844000   \n",
-       "3      failed             24      US      USD     1634792400  1642399200   \n",
-       "4      failed             53      US      USD     1608530400  1629694800   \n",
+       "      outcome  backers_count country currency  launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD   1581573600  1614578400   \n",
+       "1  successful            158      US      USD   1611554400  1621918800   \n",
+       "2  successful           1425      AU      AUD   1608184800  1640844000   \n",
+       "3      failed             24      US      USD   1634792400  1642399200   \n",
+       "4      failed             53      US      USD   1608530400  1629694800   \n",
        "\n",
        "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
@@ -1647,7 +1647,7 @@
        "backers_count                int64\n",
        "country                     object\n",
        "currency                    object\n",
-       "launched_date                int64\n",
+       "launch_date                  int64\n",
        "end_date                     int64\n",
        "staff_pick                    bool\n",
        "spotlight                     bool\n",
@@ -1703,7 +1703,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -1832,12 +1832,12 @@
        "3  Vision-oriented fresh-thinking conglomeration    4200.0    2477.0   \n",
        "4                      Proactive foreground core    7600.0    5265.0   \n",
        "\n",
-       "      outcome  backers_count country currency launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
-       "1  successful            158      US      USD    2021-01-25  2021-05-25   \n",
-       "2  successful           1425      AU      AUD    2020-12-17  2021-12-30   \n",
-       "3      failed             24      US      USD    2021-10-21  2022-01-17   \n",
-       "4      failed             53      US      USD    2020-12-21  2021-08-23   \n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            158      US      USD  2021-01-25  2021-05-25   \n",
+       "2  successful           1425      AU      AUD  2020-12-17  2021-12-30   \n",
+       "3      failed             24      US      USD  2021-10-21  2022-01-17   \n",
+       "4      failed             53      US      USD  2020-12-21  2021-08-23   \n",
        "\n",
        "   staff_pick  spotlight category & sub-category    category  subcategory  \n",
        "0       False      False        food/food trucks        food  food trucks  \n",
@@ -1855,7 +1855,7 @@
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
     "from datetime import datetime as dt\n",
-    "campaign_df[\"launched_date\"]  = pd.to_datetime(campaign_df[\"launched_date\"], unit = 's').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df[\"launch_date\"]  = pd.to_datetime(campaign_df[\"launch_date\"], unit = 's').dt.strftime('%Y-%m-%d')\n",
     "campaign_df[\"end_date\"]  = pd.to_datetime(campaign_df[\"end_date\"], unit = 's').dt.strftime('%Y-%m-%d')\n",
     "campaign_df.head()"
    ]
@@ -1898,7 +1898,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -2159,17 +2159,17 @@
        "998  Decentralized bandwidth-monitored ability    6900.0  12155.0  successful   \n",
        "999           Right-sized web-enabled intranet    9700.0  11929.0  successful   \n",
        "\n",
-       "     backers_count country currency launched_date    end_date  staff_pick  \\\n",
-       "990             57      CA      CAD    2021-12-29  2022-01-16       False   \n",
-       "991             52      US      USD    2020-07-07  2021-07-27       False   \n",
-       "992            263      AU      AUD    2020-12-20  2021-01-31       False   \n",
-       "993           1691      US      USD    2021-04-08  2021-12-18        True   \n",
-       "994            114      IT      EUR    2021-07-23  2021-11-25       False   \n",
-       "995             75      IT      EUR    2021-07-03  2021-07-08       False   \n",
-       "996            144      US      USD    2020-11-28  2021-02-28       False   \n",
-       "997            300      US      USD    2021-01-04  2021-10-04       False   \n",
-       "998            419      US      USD    2021-01-25  2021-04-18       False   \n",
-       "999            331      US      USD    2022-02-01  2022-02-16       False   \n",
+       "     backers_count country currency launch_date    end_date  staff_pick  \\\n",
+       "990             57      CA      CAD  2021-12-29  2022-01-16       False   \n",
+       "991             52      US      USD  2020-07-07  2021-07-27       False   \n",
+       "992            263      AU      AUD  2020-12-20  2021-01-31       False   \n",
+       "993           1691      US      USD  2021-04-08  2021-12-18        True   \n",
+       "994            114      IT      EUR  2021-07-23  2021-11-25       False   \n",
+       "995             75      IT      EUR  2021-07-03  2021-07-08       False   \n",
+       "996            144      US      USD  2020-11-28  2021-02-28       False   \n",
+       "997            300      US      USD  2021-01-04  2021-10-04       False   \n",
+       "998            419      US      USD  2021-01-25  2021-04-18       False   \n",
+       "999            331      US      USD  2022-02-01  2022-02-16       False   \n",
        "\n",
        "     spotlight        category & sub-category     category        subcategory  \\\n",
        "990      False  photography/photography books  photography  photography books   \n",
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2246,7 +2246,7 @@
        "      <th>backers_count</th>\n",
        "      <th>country</th>\n",
        "      <th>currency</th>\n",
-       "      <th>launched_date</th>\n",
+       "      <th>launch_date</th>\n",
        "      <th>end_date</th>\n",
        "      <th>staff_pick</th>\n",
        "      <th>spotlight</th>\n",
@@ -2369,12 +2369,12 @@
        "3  Cross-platform solution-oriented process improvement  142400.0  21307.0   \n",
        "4                          User-friendly tertiary array    3300.0  12437.0   \n",
        "\n",
-       "      outcome  backers_count country currency launched_date    end_date  \\\n",
-       "0      failed              0      CA      CAD    2020-02-13  2021-03-01   \n",
-       "1  successful            222      US      USD    2020-06-20  2021-01-30   \n",
-       "2  successful            113      US      USD    2020-11-29  2021-06-11   \n",
-       "3      failed            296      US      USD    2020-05-05  2021-05-30   \n",
-       "4  successful            131      US      USD    2021-01-29  2021-02-13   \n",
+       "      outcome  backers_count country currency launch_date    end_date  \\\n",
+       "0      failed              0      CA      CAD  2020-02-13  2021-03-01   \n",
+       "1  successful            222      US      USD  2020-06-20  2021-01-30   \n",
+       "2  successful            113      US      USD  2020-11-29  2021-06-11   \n",
+       "3      failed            296      US      USD  2020-05-05  2021-05-30   \n",
+       "4  successful            131      US      USD  2021-01-29  2021-02-13   \n",
        "\n",
        "   staff_pick  spotlight category_id subcategory_id  \n",
        "0       False      False        cat1        subcat1  \n",
@@ -2384,7 +2384,7 @@
        "4       False      False        cat1        subcat1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2397,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2475,7 +2475,7 @@
        "4  {\"contact_id\": 4941, \"name\": \"Jeanette Iannotti\", \"email\": \"jeanette.iannotti@yahoo.com\"}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2510,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2609,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2624,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2770,7 +2770,7 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2906,7 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2919,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2947,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
